--- a/Views/Account/Edit.cshtml
+++ b/Views/Account/Edit.cshtml
@@ -5,15 +5,22 @@
     <div class="form-group">
         <label asp-for="OldPassword" class="col-md-2"></label>
         <div class="col-md-10">
-            <input asp-for="OldPassword" class="form-control" />
+            <input asp-for="OldPassword" class="form-control"/>
             <span asp-validation-for="OldPassword" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
         <label asp-for="NewPassword" class="col-md-2"></label>
         <div class="col-md-10">
-            <input asp-for="NewPassword" class="form-control" />
+            <input asp-for="NewPassword" class="form-control"/>
             <span asp-validation-for="NewPassword" class="text-danger"></span>
+        </div>
+    </div>    
+    <div class="form-group">
+        <label asp-for="ConfirmNewPassword" class="col-md-2"></label>
+        <div class="col-md-10">
+            <input asp-for="ConfirmNewPassword" class="form-control"/>
+            <span asp-validation-for="ConfirmNewPassword" class="text-danger"></span>
         </div>
     </div>
 
