--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<AppUser>
-<br />
+<br/>
 <div class="row">
     <div class="col-6">
         <h2 class="text-primary">User List </h2>
@@ -28,20 +28,10 @@
                         @item.Role
                     </td>
                     <td>
-                        @* <div class="text-center"> *@
-                        @*     <form asp-action="Delete" asp-route-userId="@item.Id"> *@
-                        @*         <a asp-action="Edit" asp-route-userId="@item.Id" class="btn btn-info text-white"> *@
-                        @*             Edit *@
-                        @*         </a> *@
-                        @* *@
-                        @*         <a asp-action="ManageClaims" asp-route-userId="@item.Id" class="btn btn-primary text-white">Claims</a> *@
-                        @* *@
-                        @*         <button type="submit" onclick="return confirm('Are you sure you want to delete this?')" *@
-                        @*         class="btn btn-danger"> *@
-                        @*             Delete *@
-                        @*         </button> *@
-                        @*     </form> *@
-                        @* </div> *@
+                        <div class="text-center">
+                            <a asp-action="Edit" asp-controller="User" asp-route-userId="@item.Id" class="btn btn-info text-white">Edit</a>
+                            <a asp-action="ChangePasswd" asp-controller="User" asp-route-userId="@item.Id" class="btn btn-info text-white">Change password</a>
+                        </div>
                     </td>
                 </tr>
             }
