--- a/Views/User/ChangePasswd.cshtml
+++ b/Views/User/ChangePasswd.cshtml
@@ -3,10 +3,10 @@
 <form asp-controller="User" asp-action="ChangePasswd" method="post" role="form">
     <input asp-for="@Model.Id" hidden/>
     <div class="form-group">
-        <label asp-for="Password" class="col-md-2"></label>
+        <label asp-for="PasswordAm" class="col-md-2"></label>
         <div class="col-md-10">
-            <input asp-for="Password" class="form-control"/>
-            <span asp-validation-for="Password" class="text-danger"></span>
+            <input asp-for="PasswordAm" class="form-control"/>
+            <span asp-validation-for="PasswordAm" class="text-danger"></span>
         </div>
     </div>
 
