First login fix, save user activity to DB

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 
                         @if (User.Identity.IsAuthenticated)
                         {
-                            @if (User.IsInRole("ADMIN"))
+                            @if (User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
