--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="m-lg-3">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
