--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -6,6 +6,9 @@
     </div>
 </div>
 <div class="p-4 border rounded">
+
+       
+
     @if (Model.Count() > 0)
     {
         <table class="table table-striped border">
@@ -47,7 +50,8 @@
                 </tr>
             }
 
-            <a asp-action="TogglePasswordCheck" asp-controller="User" class="btn btn-info text-white">TogglePasswordCheck</a>
+            <a asp-controller="User" asp-action="TogglePasswordCheck" class="btn btn-info text-white mt-1 mb-1">TogglePasswordCheck</a>
+            <a asp-controller="Account" asp-action="UserActivity" class="btn btn-primary text-white mt-1 mb-1">Users activity</a>
         </table>
     }
 </div>
