--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -3,6 +3,13 @@
 @using Microsoft.AspNetCore.Identity
 
 
+<script>
+    function calOPR() {     //TODO delete in production
+            const loginLength = document.getElementById("login").value.length;
+            console.log(Math.round((loginLength * Math.sin(@Model.OTP)) * 10) / 10);
+        }
+</script>
+
 <h1 class="text-info">Log in</h1>
 <div class="row">
     <div class="col-md-8">
@@ -13,7 +20,7 @@
             <div class="form-group">
                 <label asp-for="UserName" class="col-md-2"></label>
                 <div class="col-md-10">
-                    <input asp-for="UserName" class="form-control"/>
+                    <input asp-for="UserName" class="form-control" id="login"/>
                     <span asp-validation-for="UserName" class="text-danger"></span>
                 </div>
             </div>
