--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -3,12 +3,12 @@
 @using Microsoft.AspNetCore.Identity
 
 
-<script>
+@*<script>
     function calOPR() {     //TODO delete in production
             const loginLength = document.getElementById("login").value.length;
             console.log(Math.round((loginLength * Math.sin(@Model.OTP)) * 10) / 10);
         }
-</script>
+</script>*@
 
 <h1 class="text-info">Log in</h1>
 <div class="row">
